# todo_app

./: .gitignore  LICENSE  README.md  README.md~  build.sh  pyproject.toml  requirements.txt
todo_project/app_auth/: apps.py  forms.py  forms.py~  models.py  models.py~  urls.py  views.py  views.py~
todo_project/app_auth/migrations/: 0001_initial.py
todo_project/app_auth/templates/app_auth/: login.html  logout.html  register.html
todo_project/staticfiles/: staticfiles.json
todo_project/staticfiles/todo_app/css/: main.css
todo_project/todo_app/: apps.py  apps.py~  forms.py  forms.py~  models.py  models.py~  repository.py  repository.py~  signals.py  urls.py  views.py  views.py~
todo_project/todo_app/migrations/: 0001_initial.py  0002_usersettings.py
todo_project/todo_app/static/todo_app/css/: main.css
todo_project/todo_app/templates/todo/: base.html  base.html~  create.html  create.html~  delete.html  home.html  home.html~  list.html  list.html~  update.html  update.html~
todo_project/todo_project/: settings.py  settings.py~  urls.py  urls.py~
