[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["MykolaMS9 <mykolanikonov99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.5"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
django-environ = "^0.12.0"
psycopg2 = "^2.9.10"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
